--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,14 +29,14 @@
 
     <div class="row container-fluid pt-4">
         <div class="  col-md-4  p-2">
-            <form class="row g-3 bg-secondary rounded py-2" >
+            <form  th:action="@{/make-order/}" method="post" class="row g-3 bg-secondary rounded py-2" >
                 <div class="col-md-12">
                     <h4 class="text-white text-center">Place new order</h4>
                 </div>
                 <div class="col-md-6">
                     <div class="input-group ">
                         <span class="input-group-text">Customer</span>
-                        <select class="form-select" id="Customer" name="customer" required>
+                        <select class="form-select" id="customer_id" name="customer_id" required>
                             <option selected disabled value="">Choose...</option>
                             <option th:each="customer : ${customers}" th:value="${customer.id}" th:text="${customer.email}"></option>
                         </select>
@@ -45,7 +45,7 @@
                 <div class="col-md-6">
                     <div class="input-group ">
                       <span class="input-group-text">Product</span>
-                      <select class="form-select" id="specialization" name="specialization" required>
+                      <select class="form-select" id="product_id" name="product_id" required>
                         <option selected disabled value="">Choose...</option>
                         <option th:each="product : ${products}" th:value="${product.id}" th:text="${product.name}"></option>
                       </select>      
@@ -58,7 +58,7 @@
                 </div>
               </form>
 
-            <form class="row g-3 mt-4 bg-secondary rounded py-2" >
+            <form th:action="@{/add-customer/}" method="post" class="row g-3 mt-4 bg-secondary rounded py-2" >
                 <div class="col-md-12 mt-4">
                     <h4 class="text-white text-center">Add new customer</h4>
                 </div>
@@ -71,8 +71,14 @@
                 </div>
                 <div class="col-md-6">
                     <div class="input-group ">
-                        <span class="input-group-text">mobile</span>
-                        <input type="text" class="form-control" id="mobile" name="mobile" required>
+                        <span class="input-group-text">telephone</span>
+                        <input type="text" class="form-control" id="telephone" name="telephone" required>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="input-group ">
+                        <span class="input-group-text">address</span>
+                        <input type="text" class="form-control" id="address" name="address" required>
                     </div>
                 </div>
                 <div class="col-12">
